k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: vidops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: vidops/user-service:0.1.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: vidops
spec:
  selector:
    app: user-service
  ports:
    - port: 8082
      targetPort: 8082
